RESOLVED FIXED115972
Possible crash when going Back while loading PDF
https://bugs.webkit.org/show_bug.cgi?id=115972
Summary Possible crash when going Back while loading PDF
Simon Fraser (smfr)
Reported 2013-05-11 18:06:29 PDT
Possible crash when going Back while loading PDF
Attachments
Patch (1.51 KB, patch)
2013-05-11 18:08 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2013-05-11 18:08:00 PDT
Simon Fraser (smfr)
Comment 2 2013-05-11 18:08:28 PDT
Simon Fraser (smfr)
Comment 3 2013-05-11 21:27:54 PDT
Note You need to log in before you can comment on or make changes to this bug.