Possible crash when going Back while loading PDF https://bugs.webkit.org/show_bug.cgi?id=115972

Reviewed by Dan Bernstein.

It's possible for m_frame to be null when Document::findUnsafeParentScrollPropagationBoundary()
is called, so null-check currentFrame.

* dom/Document.cpp:
(WebCore::Document::findUnsafeParentScrollPropagationBoundary):

Canonical link: https://commits.webkit.org/134395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149948 268f45cc-cd09-0410-ab3c-d52691b4dbfc